[gd_scene load_steps=4 format=3 uid="uid://8ispcgdeb33k"]

[ext_resource type="Script" uid="uid://cdb81uyjcvkta" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://cjieadttrisv3" path="res://assets/egg(1).png" id="2_oo0fn"]
[ext_resource type="Texture2D" uid="uid://d1cr7t5hkgdw8" path="res://assets/Pause.png" id="3_5ysmq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")
egg_icon = ExtResource("2_oo0fn")

[node name="EggContainer" type="HBoxContainer" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 65.0
offset_bottom = 65.0

[node name="PauseButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(48, 48)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 15.0
offset_right = -19.0
offset_bottom = 63.0
grow_horizontal = 0
texture_normal = ExtResource("3_5ysmq")
stretch_mode = 0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
